# decision-intelligence-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: ml.py  rag.py
backend/app/utils/: features.py  llm.py  ml.py  retrieval.py
frontend/: Dockerfile
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: About.jsx  Assistant.jsx  Home.jsx
